--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>com.itsallbinary</groupId>
 			<artifactId>simply-regex</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.1.0</version>
 		</dependency>
 
 		<dependency>
